--- a/rclcpp/package.xml
+++ b/rclcpp/package.xml
@@ -27,6 +27,8 @@
   <depend>rcpputils</depend>
   <depend>rcutils</depend>
   <depend>rmw</depend>
+  <depend>metrics_statistics_msgs</depend>
+  <depend>statistics_collector_lib</depend>
   <depend>tracetools</depend>
 
   <test_depend>ament_cmake_gmock</test_depend>
