--- a/rclcpp/package.xml
+++ b/rclcpp/package.xml
@@ -28,7 +28,7 @@
   <depend>rcutils</depend>
   <depend>rmw</depend>
   <depend>metrics_statistics_msgs</depend>
-  <depend>statistics_collector_lib</depend>
+  <depend>libstatistics_collector</depend>
   <depend>tracetools</depend>
 
   <test_depend>ament_cmake_gmock</test_depend>
